--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  snippet_coder_utils: ^1.0.13
   printing: ^5.10.1
   pdf: ^3.9.0
   firebase_database: ^10.0.16
