--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  dropdown_button2: ^2.1.0
   snippet_coder_utils: ^1.0.13
   printing: ^5.10.1
   pdf: ^3.9.0
@@ -36,7 +37,6 @@ dependencies:
   cloud_firestore: ^4.4.5
   firebase_core: ^2.8.0
   firebase_auth: ^4.3.0
-  awesome_dropdown:
   flutter_barcode_scanner:
   flutter:
     sdk: flutter
